2007-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* INSTALL-FROM-CVS: Bump required version numbers for automake to
	1.9, and autoconf to 2.59 as this is the only thing we are testing
	these days.

2007-04-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dave N6NZ
	* src/devdescr.cc: add entries for ATmega325/3250/645/6450.

2007-03-21 Colin O'Flynn <coflynn@newae.com>

	* src/main.cc: Added patch #1121113 which adds a JTAG_DEV env variable
	* doc/avarice.1: Added JTAG_DEV to docs

2007-02-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add entries for AT90PWM2/3B.
	* tools/devdescr.xsl: Declare the "count" parameter in the format-hex
	template.  Recent versions of xsltproc appear to be more picky about
	that.

2007-02-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump date, now that we've got a first previous of
	Colin's soft BP implementation.

2007-02-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(On behalf of Colin O'Flynn)
	* src/jtag2bp.cc: Implement software breakpoints.
	* src/jtag2.h: (Ditto.)

2007-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump date.

2007-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Complete overhaul of the USB communication:
	- Use a second pipe (ctrlPipe) between main AVaRICE and the
	  daemon to signal control information.
	- Move the entire libusb handling from the parent into the
	  child process, so it only happens a single time.  Have the
	  parent wait until the child could make a decision, either
	  failure to find the requested USB device, or success of being
	  able to talk to it.
	- Do no longer poll USB when not needed, instead either read a
	  reply when the master process told the daemon it is expecting
	  one, or start polling while the target is running.
	- Add an option for the parent to have the USB daemon clear the
	  endpoints after seeing successive timeouts while data was
	  expected.